完善权限认证